--- a/foundry.toml
+++ b/foundry.toml
@@ -4,9 +4,9 @@ ffi = true
 fs_permissions = [{access = "read-write", path = ".forge-snapshots/"}]
 libs = ["lib"]
 out = "out"
-solc_version = "0.8.30"
+solc_version = "0.8.26"
 src = "src"
-via_ir = false
+via_ir = true
 
 [lint]
 exclude_lints = ["screaming-snake-case-immutable", "screaming-snake-case-const"]
